# phd-lit-metadata-engine-public

./: .dockerignore  .env.example  .gitignore  README.md  SECURITY.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  setup.py
backend/app/: __init__.py  config.py  database.py  dedupe.py  exports.py  harvest.py  importers.py  main.py  models.py  notebook_launcher.py  rate_limits.py
backend/app/sources/: __init__.py  acm_digital_library.py  arxiv.py  base.py  biorxiv.py  core.py  crossref.py  doaj.py  europe_pmc.py  ieee_xplore.py  openalex.py  pubmed.py  registry.py  scopus.py  semantic_scholar.py  web_of_science.py
configs/: query_pack.yaml
data/: README.md
docs/: public_release.md  rate_limits.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  styles.css
notebooks/: 01_metadata_analysis.ipynb
protocol/: CHANGELOG.md  README.md  derived_variables.py  extraction_codebook_v1.csv
reports/: README.md
scripts/: dev.py
tests/: test_dedupe.py  test_derived_variables.py  test_exports.py  test_notebook_launcher.py  test_semantic_scholar.py
