[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phd-lit-metadata-backend"
version = "0.1.0"
description = "Local scholarly metadata harvesting backend for PhD literature searches"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "pandas>=2.1",
  "openpyxl>=3.1",
  "rapidfuzz>=3.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "jupyterlab>=4.0",
  "matplotlib>=3.8",
]

[tool.setuptools]
packages = ["app", "app.sources"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["../tests"]

